[package]
name = "rong_rt"
version.workspace = true
edition.workspace = true

description = "Async runtime, HTTP client, and platform services for RongJS"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/rong_rt"
readme = "README.md"

[dependencies]
tokio = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
http-body-util = { workspace = true }
http-body = "1.0"
hyper = { workspace = true }
hyper-http-proxy = { version = "1.1.0", default-features = false }
hyper-rustls = { workspace = true, default-features = false }
hyper-util = { workspace = true }
rustls = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
url = "2.5"

[dev-dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["net"] }
tempfile = "3"

[features]
default = []
tls-aws-lc = ["hyper-rustls/aws-lc-rs", "rustls/aws_lc_rs"]
tls-ring = ["hyper-rustls/ring", "rustls/ring"]
