[workspace]
members = [
    "core",
    "macro",
    "quickjs",
    "javascriptcore",
    "utils/rustyjs_test",
    "examples/point",
    "modules/timer",
    "modules/navigator",
]

[workspace.dependencies]
rusty-js = { path = "."}

[package]
name = "rusty-js"
version = "0.1.0"
edition = "2021"

[dependencies]
rusty-js-core = { path = "core" }
rusty-js-quickjs = { path = "quickjs", optional = true }
rusty-js-jscore = { path = "javascriptcore", optional = true }
rusty-js-macro = { path = "macro" }
tokio = { version = "1.0", features = ["rt", "time", "macros"] }

[features]
quickjs = ["rusty-js-quickjs"]
jscore = ["rusty-js-jscore"]
default = ["quickjs"]

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "time", "macros"] }
rustyjs_test = { path = "utils/rustyjs_test" }

[profile.test]
debug = true

