[package]
name = "rong_jscore_sys"
version.workspace = true
edition.workspace = true

description = "JavaScriptCore FFI bindings for RongJS"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/rong_jscore_sys"
readme = "README.md"
[build-dependencies]
bindgen = "0.72"
