[package]
name = "rong_jscore_sys"
version = "0.4.1"
edition.workspace = true

description = "JavaScriptCore FFI bindings for RongJS"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/rong_jscore_sys"
readme = "README.md"
# Lets dependents read the chosen backend via DEP_JSCORE_BACKEND in their build script.
links = "jscore"

[features]
# Force the source/JSCOnly backend even on Apple for local dev/testing of the
# source path. Off: macOS/iOS use the system framework; other targets use source.
source = []

[build-dependencies]
bindgen = "0.72"
cc = "1.2"
