[package]
name = "abort"
version = "0.1.0"
edition = "2021"

[dependencies]
rong = { workspace = true }
event = {path="../event"}
dom-exception = {path="../dom-exception"}
tokio = { version = "1.0", features = ["rt", "time", "macros"] }



[dev-dependencies]
rong_test = { path = "../../utils/rong_test" }
assert = { path="../../modules/assert" }
event = { path="../../modules/event" }
dom-exception = { path="../../modules/dom-exception" }
timer = { path="../../modules/timer" }
console = { path="../../modules/console" }
