[package]
name = "fetch"
version = "0.1.0"
edition = "2021"

[dependencies]
rusty-js = { workspace = true }
tokio = { version = "1.0", features = ["rt", "time", "macros"] }
http = { package = "http", version = "1.2" }
lxr_url = { path = "../lxr_url" }
hyper = { version = "1.6.0", features = ["client", "http1"] }
hyper-util = { version = "0.1.10", features = ["client", "http1", "tokio"] }
hyper-rustls = { version = "0.27.5", features = ["webpki-roots", "http1"] }
bytes = "1.10.1"

[dev-dependencies]
rustyjs_test = { path = "../../utils/rustyjs_test" }
encoding={path="../encoding"}
console={path="../console"}
assert={path="../assert"}
