[package]
name = "fetch"
version = "0.1.0"
edition = "2021"

[dependencies]
rong-js = { workspace = true }
tokio = { version = "1.0", features = ["rt", "time", "macros"] }
http = { package = "http", version = "1.2" }
rong_url = { path = "../rong_url" }
abort = { path = "../abort" }
buffer = { path = "../buffer" }
navigator = { path = "../navigator" }
dom-exception = { path = "../dom-exception" }
hyper = { version = "1.6.0", features = ["client", "http1"] }
hyper-util = { version = "0.1.10", features = ["client", "http1", "tokio"] }
hyper-rustls = { version = "0.27.5", features = ["webpki-roots", "http1", "aws-lc-rs"] }
rustls = { version = "0.23", default-features = false }
bytes = "1.10.1"
http-body-util = "0.1.2"
flate2 = { version = "1.1.0" }
uuid = { version = "1.16.0", features = ["v4"] }

[dev-dependencies]
rong_test = { path = "../../utils/rong_test" }
encoding={path="../encoding"}
console={path="../console"}
assert={path="../assert"}
timer={path="../timer"}
futures = "0.3"
tokio-stream = "0.1"
axum = { version = "0.8.1", features = ["http1"] }
serde_json = "1.0"
