[package]
name = "fs"
version = "0.1.0"
edition = "2021"

[dependencies]
rusty-js = { path = "../../" }
rusty-js-quickjs = { path = "../../quickjs" }
tokio = { version = "1.0", features = ["fs", "io-util"] }
abort = { path = "../abort" }
dom-exception = { path = "../dom-exception" }
futures = "0.3"
filetime = "0.2"
nix = { version = "0.29.0", features = ["user", "fs"] }

[dev-dependencies]
rustyjs_test = { path = "../../utils/rustyjs_test" }
encoding = { path = "../encoding" }
console = { path = "../console" }
assert = { path = "../assert" }
