[package]
name = "rong_abort"
version.workspace = true
edition.workspace = true

description = "Abort module for RongJS"
license.workspace = true
repository.workspace = true
readme.workspace = true
[dependencies]
rong = { workspace = true }
tokio = { workspace = true }
rong_event = { workspace = true }
rong_exception = { workspace = true }

[features]
# Forward JS engine features to the main rong crate
quickjs = ["rong/quickjs"]
jscore = ["rong/jscore"]
arkjs = ["rong/arkjs"]

[dev-dependencies]
rong_test = { workspace = true }
rong_assert = { workspace = true }
rong_event = { workspace = true }
rong_exception = { workspace = true }
rong_timer = { workspace = true }
rong_console = { workspace = true }
