[package]
name = "rong_abort"
version.workspace = true
edition.workspace = true

description = "Abort module for RongJS"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/rong_abort"
readme = "README.md"
[dependencies]
rong = { workspace = true }
tokio = { workspace = true }
rong_event = { workspace = true }
rong_exception = { workspace = true }

[features]
# Forward JS engine features to the main rong crate
default = []
quickjs = ["rong/quickjs", "rong_event/quickjs", "rong_exception/quickjs"]
jscore = ["rong/jscore", "rong_event/jscore", "rong_exception/jscore"]
arkjs = ["rong/arkjs", "rong_event/arkjs", "rong_exception/arkjs"]
tls-aws-lc = ["rong/tls-aws-lc"]
tls-ring = ["rong/tls-ring"]

[dev-dependencies]
rong_test = { path = "../../testing/rong_test" }
rong_assert = { workspace = true }
rong_event = { workspace = true }
rong_exception = { workspace = true }
rong_timer = { workspace = true }
rong_console = { workspace = true }
