[package]
name = "rong_assert"
version.workspace = true
edition.workspace = true

description = "Assert module for RongJS"
license.workspace = true
repository.workspace = true
readme.workspace = true
[dependencies]
rong = { workspace = true }

[features]
# Forward JS engine features to the main rong crate
default = ["quickjs"]
quickjs = ["rong/quickjs"]
jscore = ["rong/jscore"]
arkjs = ["rong/arkjs"]

[dev-dependencies]
rong_test = { path = "../../utils/rong_test" }
