[package]
name = "rong_assert"
version.workspace = true
edition.workspace = true

description = "Assert module for RongJS"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/rong_assert"
readme = "README.md"
[dependencies]
rong = { workspace = true }

[features]
# Forward JS engine features to the main rong crate
default = []
quickjs = ["rong/quickjs"]
jscore = ["rong/jscore"]
arkjs = ["rong/arkjs"]
tls-aws-lc = ["rong/tls-aws-lc"]
tls-ring = ["rong/tls-ring"]

[dev-dependencies]
rong_test = { workspace = true }
