[package]
name = "rong_buffer"
version.workspace = true
edition.workspace = true

description = "Buffer module for RongJS"
license.workspace = true
repository.workspace = true
readme.workspace = true
[dependencies]
rong = { workspace = true }

[features]
# Forward JS engine features to the main rong crate
quickjs = ["rong/quickjs"]
jscore = ["rong/jscore"]
arkjs = ["rong/arkjs"]

[dev-dependencies]
rong_test = { workspace = true }
rong_console = { workspace = true }
rong_assert = { workspace = true }
rong_encoding = { workspace = true }
