[package]
name = "rong_buffer"
version.workspace = true
edition.workspace = true

description = "Buffer module for RongJS"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/rong_buffer"
readme = "README.md"
[dependencies]
rong = { workspace = true }
bytes = { workspace = true }

[features]
# Forward JS engine features to the main rong crate
default = []
quickjs = ["rong/quickjs"]
jscore = ["rong/jscore"]
arkjs = ["rong/arkjs"]

[dev-dependencies]
rong_test = { path = "../../utils/rong_test" }
rong_console = { path = "../rong_console" }
rong_assert = { path = "../rong_assert" }
rong_encoding = { path = "../rong_encoding" }
