[package]
name = "rong_child_process"
version.workspace = true
edition.workspace = true

description = "Child process module for RongJS"
license.workspace = true
repository.workspace = true
readme.workspace = true
[dependencies]
rong = { workspace = true }
rong_event = { workspace = true }
rong_stream = { workspace = true }
tokio = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
# Forward JS engine features to the main rong crate
default = ["quickjs"]
quickjs = ["rong/quickjs"]
jscore = ["rong/jscore"]
arkjs = ["rong/arkjs"]

[dev-dependencies]
rong_test = { path = "../../utils/rong_test" }
rong_timer = { path = "../rong_timer" }
rong_console = { path = "../rong_console" }
rong_assert = { path = "../rong_assert" }
rong_process = { path = "../rong_process" }
rong_encoding = { path = "../rong_encoding" }
