[package]
name = "rong_child_process"
version.workspace = true
edition.workspace = true

description = "Child process module for RongJS"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/rong_child_process"
readme = "README.md"
[dependencies]
rong = { workspace = true }
rong_event = { workspace = true }
rong_stream = { workspace = true }
tokio = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
# Forward JS engine features to the main rong crate
default = []
quickjs = ["rong/quickjs", "rong_event/quickjs", "rong_stream/quickjs"]
jscore = ["rong/jscore", "rong_event/jscore", "rong_stream/jscore"]
arkjs = ["rong/arkjs", "rong_event/arkjs", "rong_stream/arkjs"]

[dev-dependencies]
rong_test = { workspace = true }
rong_timer = { workspace = true }
rong_console = { workspace = true }
rong_assert = { workspace = true }
rong_process = { workspace = true }
rong_encoding = { workspace = true }
