[package]
name = "rong_console"
version = "0.1.0"
edition = "2024"

[dependencies]
rong = { workspace = true }

[features]
# Forward JS engine features to the main rong crate
quickjs = ["rong/quickjs"]
jscore = ["rong/jscore"]
arkjs = ["rong/arkjs"]

[dev-dependencies]
rong_test = { workspace = true }
