[package]
name = "rong_console"
version.workspace = true
edition.workspace = true

description = "Console module for RongJS"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/rong_console"
readme = "README.md"
[dependencies]
rong = { workspace = true }
tracing = { workspace = true }

[features]
# Forward JS engine features to the main rong crate
default = []
quickjs = ["rong/quickjs"]
jscore = ["rong/jscore"]
arkjs = ["rong/arkjs"]
tls-aws-lc = ["rong/tls-aws-lc"]
tls-ring = ["rong/tls-ring"]

[dev-dependencies]
rong_test = { workspace = true }
tracing-subscriber = { workspace = true }
