[package]
name = "rong_encoding"
version.workspace = true
edition.workspace = true

description = "Encoding module for RongJS"
license.workspace = true
repository.workspace = true
readme.workspace = true
[dependencies]
rong = { workspace = true }
base64 = "0.22.1"

[features]
# Forward JS engine features to the main rong crate
default = ["quickjs"]
quickjs = ["rong/quickjs"]
jscore = ["rong/jscore"]
arkjs = ["rong/arkjs"]

[dev-dependencies]
rong_test = { path = "../../utils/rong_test" }
rong_console = { path = "../rong_console" }
