[package]
name = "rong_encoding"
version.workspace = true
edition.workspace = true

description = "Encoding module for RongJS"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/rong_encoding"
readme = "README.md"
[dependencies]
rong = { workspace = true }
base64 = "0.22.1"

[features]
# Forward JS engine features to the main rong crate
default = []
quickjs = ["rong/quickjs"]
jscore = ["rong/jscore"]
arkjs = ["rong/arkjs"]
tls-aws-lc = ["rong/tls-aws-lc"]
tls-ring = ["rong/tls-ring"]

[dev-dependencies]
rong_test = { path = "../../testing/rong_test" }
rong_console = { workspace = true }
