[package]
name = "rong_event"
version = "0.1.0"
edition = "2024"

[dependencies]
rong = { workspace = true }

[features]
# Forward JS engine features to the main rong crate
quickjs = ["rong/quickjs"]
jscore = ["rong/jscore"]
v8 = ["rong/v8"]

[dev-dependencies]
rong_test = { workspace = true }
rong_assert = { path="../../modules/rong_assert" }
rong_timer = { path="../../modules/rong_timer" }
rong_console = { path="../../modules/rong_console" }
