[package]
name = "rong_event"
version.workspace = true
edition.workspace = true

description = "Event module for RongJS"
license.workspace = true
repository.workspace = true
readme.workspace = true
[dependencies]
rong = { workspace = true }

[features]
# Forward JS engine features to the main rong crate
quickjs = ["rong/quickjs"]
jscore = ["rong/jscore"]
arkjs = ["rong/arkjs"]

[dev-dependencies]
rong_test = { path = "../../utils/rong_test" }
rong_assert = { path = "../rong_assert" }
rong_timer = { path = "../rong_timer" }
rong_console = { path = "../rong_console" }
