[package]
name = "rong_event"
version.workspace = true
edition.workspace = true

description = "Event module for RongJS"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/rong_event"
readme = "README.md"
[dependencies]
rong = { workspace = true }

[features]
# Forward JS engine features to the main rong crate
default = []
quickjs = ["rong/quickjs"]
jscore = ["rong/jscore"]
arkjs = ["rong/arkjs"]

[dev-dependencies]
rong_test = { workspace = true }
rong_assert = { workspace = true }
rong_timer = { workspace = true }
rong_console = { workspace = true }
