[package]
name = "rong_exception"
version.workspace = true
edition.workspace = true

description = "Exception module for RongJS"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/rong_exception"
readme = "README.md"
[dependencies]
rong = { workspace = true }

[features]
# Forward JS engine features to the main rong crate
default = []
quickjs = ["rong/quickjs"]
jscore = ["rong/jscore"]
arkjs = ["rong/arkjs"]

[dev-dependencies]
rong_test = { workspace = true }
