[package]
name = "rong_fs"
version.workspace = true
edition.workspace = true

description = "Filesystem module for RongJS"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/rong_fs"
readme = "README.md"
[dependencies]
rong = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
rong_abort = { workspace = true }
rong_exception = { workspace = true }
rong_stream = { workspace = true }
bytes = { workspace = true }
filetime = "0.2"
nix = { workspace = true }

[features]
# Forward JS engine features to the main rong crate
default = []
quickjs = ["rong/quickjs", "rong_abort/quickjs", "rong_exception/quickjs", "rong_stream/quickjs"]
jscore = ["rong/jscore", "rong_abort/jscore", "rong_exception/jscore", "rong_stream/jscore"]
arkjs = ["rong/arkjs", "rong_abort/arkjs", "rong_exception/arkjs", "rong_stream/arkjs"]

[dev-dependencies]
rong_test = { workspace = true }
rong_encoding = { workspace = true }
rong_console = { workspace = true }
rong_assert = { workspace = true }
