[package]
name = "rong_http"
version.workspace = true
edition.workspace = true

description = "HTTP module for RongJS"
license.workspace = true
repository.workspace = true
readme.workspace = true
[dependencies]
rong = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
rong_abort = { workspace = true }
rong_exception = { workspace = true }
rong_buffer = { workspace = true }
flate2 = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
http-body = "1.0"
hyper = { workspace = true }
hyper-rustls = { workspace = true, default-features = false }
hyper-util = { workspace = true }
rustls = { workspace = true }
rong_navigator = { workspace = true }
rong_url = { workspace = true }
url = "2.5.4"
uuid = { workspace = true }
rong_stream = { workspace = true }
tokio-stream = { workspace = true }
serde_json = { workspace = true }

[features]
# Forward JS engine features to the main rong crate
default = ["quickjs", "tls-aws-lc"]
quickjs = ["rong/quickjs"]
jscore = ["rong/jscore"]
arkjs = ["rong/arkjs"]
tls-aws-lc = ["hyper-rustls/aws-lc-rs", "rustls/aws_lc_rs"]
tls-ring = ["hyper-rustls/ring", "rustls/ring"]

[dev-dependencies]
rong_test = { path = "../../utils/rong_test", features = ["http"] }
rong_encoding = { path = "../rong_encoding" }
rong_console = { path = "../rong_console" }
rong_assert = { path = "../rong_assert" }
rong_timer = { path = "../rong_timer" }
futures = { workspace = true }
tokio-stream = { workspace = true }
serde_json = { workspace = true }
rong_fs = { path = "../rong_fs" }
