[package]
name = "rong_http"
version = "0.4.0"
edition.workspace = true

description = "HTTP module for RongJS"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/rong_http"
readme = "README.md"
[dependencies]
rong = { workspace = true }
rong_rt = { workspace = true, default-features = false }
futures = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
rong_abort = { workspace = true }
rong_exception = { workspace = true }
rong_buffer = { workspace = true }
flate2 = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
http-body = "1.0"
hyper = { workspace = true }
rong_url = { workspace = true }
url = "2.5.4"
uuid = { workspace = true }
rong_stream = { workspace = true }
tokio-stream = { workspace = true }
serde_json = { workspace = true }

[features]
# TLS backend is intentionally selected by the top-level product crate.
default = []
quickjs = [
    "rong/quickjs",
    "rong_abort/quickjs",
    "rong_exception/quickjs",
    "rong_buffer/quickjs",
    "rong_url/quickjs",
    "rong_stream/quickjs",
]
jscore = [
    "rong/jscore",
    "rong_abort/jscore",
    "rong_exception/jscore",
    "rong_buffer/jscore",
    "rong_url/jscore",
    "rong_stream/jscore",
]
arkjs = [
    "rong/arkjs",
    "rong_abort/arkjs",
    "rong_exception/arkjs",
    "rong_buffer/arkjs",
    "rong_url/arkjs",
    "rong_stream/arkjs",
]
tls-aws-lc = ["rong_rt/tls-aws-lc"]
tls-ring = ["rong_rt/tls-ring"]

[dev-dependencies]
rong_test = { path = "../../testing/rong_test", features = ["http"] }
rong_encoding = { workspace = true }
rong_console = { workspace = true }
rong_assert = { workspace = true }
rong_timer = { workspace = true }
tokio-stream = { workspace = true }
serde_json = { workspace = true }
rong_fs = { workspace = true }
